# D3D12Renderer

./: .gitignore  CMakeLists.txt
Chapter 13 The Compute Shader/SobelFilter/: SobelApp.cpp  SobelFilter.vcxproj  SobelFilter.vcxproj.filters  VRS.cpp  VRS.h
Chapter 13 The Compute Shader/SobelFilter/x64/Debug/: SobelFilter.exe.recipe  SobelFilter.vcxproj.FileListAbsolute.txt  vc142.idb
Chapter 13 The Compute Shader/SobelFilter/x64/Debug/SobelFilter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SobelFilter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engine/core/: CMakeLists.txt
engine/core/include/: FrameResource.h  GpuWaves.h  RenderTarget.h  SobelFilter.h  VRS.h
engine/core/include/render/: Camera.h  GpuWaves.h  RenderItem.h  RenderTarget.h  SobelFilter.h  VRS.h
engine/core/include/render/object/: Vector.h
engine/core/include/rhi/: FrameResource.h  d3dApp.h  d3dUtil.h
engine/core/include/utils/: Defines.h
engine/core/src/: FrameResource.cpp  GpuWaves.cpp  RenderTarget.cpp  SobelApp.cpp  SobelFilter.cpp  VRS.cpp  d3dApp.cpp
engine/core/src/render/: Camera.cpp  GpuWaves.cpp  RenderTarget.cpp  SobelFilter.cpp  VRS.cpp
engine/core/src/rhi/: DDSTextureLoader.cpp  FrameResource.cpp  d3dApp.cpp  d3dUtil.cpp
engine/core/src/utils/: GameTimer.cpp  GeometryGenerator.cpp  MathHelper.cpp
engine/test/: CMakeLists.txt
engine/test/src/: main.cpp
engine/win32/: CMakeLists.txt  SobelApp.cpp
shaders/: Composite.hlsl  VRSMask.hlsl
